[PMM-1790] Fixed issues with wrapping wrning messege.

--- a/src/app/query-profile/query-profile.component.scss
+++ b/src/app/query-profile/query-profile.component.scss
@@ -7,4 +7,8 @@
     .query-profile-table td {
         white-space: nowrap;
     }
+
+    .wrap {
+        white-space: normal;
+    }
 }
